--- a/.env
+++ b/.env
@@ -26,7 +26,9 @@ APP_SECRET=845c9376721fdd14c9e2b169bcfc7f4b
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="mysql://root:papecisse@127.0.0.1:3306/LesPilotesConnectes?serverVersion=8.0"
+
+DATABASE_URL="mysql://root:juba@127.0.0.1:3306/LesPilotesConnectes?serverVersion=8.0"
+
 
 ###< doctrine/doctrine-bundle ###
 
@@ -36,7 +38,6 @@ DATABASE_URL="mysql://root:papecisse@127.0.0.1:3306/LesPilotesConnectes?serverVe
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
-
 ###> symfony/mailer ###
 MAILER_DSN=null://null
 ###< symfony/mailer ###
