--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,6 +1,8 @@
 parameters:
     profile_images_directory: '%kernel.project_dir%/public/uploads/profile_images'
     images_directory: '%kernel.project_dir%/public/uploads/offres'
+    photos_directory: '%kernel.project_dir%/public/uploads/photos'
+
 
 services:
     # default configuration for services in *this* file
