--- a/config/services.yaml
+++ b/config/services.yaml
@@ -2,6 +2,7 @@ parameters:
     profile_images_directory: '%kernel.project_dir%/public/uploads/profile_images'
     images_directory: '%kernel.project_dir%/public/uploads/offres'
     photos_directory: '%kernel.project_dir%/public/uploads/photos'
+    licenses_directory: '%kernel.project_dir%/public/uploads/licenses'
 
 
 services:
@@ -21,4 +22,7 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\Validator\ValidDrivingLicenseValidator:
+        tags: [ 'validator.constraint_validator' ]
 
