--- a/.env
+++ b/.env
@@ -28,7 +28,9 @@ APP_SECRET=845c9376721fdd14c9e2b169bcfc7f4b
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 
 #DATABASE_URL="mysql://root:papecisse@127.0.0.1:3306/LesPilotesConnectes?serverVersion=8.0"
-DATABASE_URL="mysql://root:testbase@127.0.0.1:3306/LesPilotesConnectes?serverVersion=8.0"
+#DATABASE_URL="mysql://root:testbase@127.0.0.1:3306/LesPilotesConnectes?serverVersion=8.0"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/LesPilotesConnectes?serverVersion=5.7"
+
 
 ###< doctrine/doctrine-bundle ###
 
