reservation d'une voiture fonctionnelle à 100%

--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ APP_SECRET=845c9376721fdd14c9e2b169bcfc7f4b
 
 #DATABASE_URL="mysql://root:papecisse@127.0.0.1:3306/LesPilotesConnectes?serverVersion=8.0"
 #DATABASE_URL="mysql://root:testbase@127.0.0.1:3306/LesPilotesConnectes?serverVersion=8.0"
-DATABASE_URL="mysql://root:papecisse@127.0.0.1:3306/LesPilotesConnectes?serverVersion=5.7"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/LesPilotesConnectes?serverVersion=5.7"
 
 
 ###< doctrine/doctrine-bundle ###
