--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,6 +3,7 @@ security:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
         App\Entity\Utilisateur: 'auto'
         App\Entity\Administrateur: 'auto'  # Ajout du hash pour l'admin
+        App\Entity\Juriste: 'auto'        # Ajout du hash pour le juriste
 
     providers:
         app_user_provider:
@@ -13,19 +14,42 @@ security:
             entity:
                 class: App\Entity\Administrateur
                 property: email
+        app_juriste_provider:              # Nouveau provider pour le juriste
+            entity:
+                class: App\Entity\Juriste
+                property: email
 
     firewalls:
+        juriste:                        # Nouveau firewall pour le juriste
+            pattern: ^/juriste
+            provider: app_juriste_provider
+            form_login:
+                login_path: juriste_login
+                check_path: juriste_login
+                default_target_path: juriste_dashboard  # Redirige après login réussi
+                username_parameter: email    # Nom du champ pour l'identifiant
+                password_parameter: password # Nom du champ pour le mot de passe
+            logout:
+                path: juriste_logout
+                target: app_login               # Redirige vers la page de login utilisateur
+            access_denied_url: juriste_login    # Si accès refusé, aller au login juriste
+            remember_me:
+                secret: '%kernel.secret%'
+                lifetime: 604800
+                path: /
+                always_remember_me: true
+
         admin:
             pattern: ^/admin
             provider: app_admin_provider
             form_login:
                 login_path: admin_login
                 check_path: admin_login
-                default_target_path: admin_dashboard  # Redirige après login réussi
+                default_target_path: admin_dashboard
             logout:
                 path: admin_logout
                 target: homepage
-            access_denied_url: admin_login  # Si accès refusé, aller au login
+            access_denied_url: admin_login
             remember_me:
                 secret: '%kernel.secret%'
                 lifetime: 604800
@@ -42,8 +66,7 @@ security:
             custom_authenticator: App\Security\UserAuthenticator
             logout:
                 path: app_logout
-                target: app_login  # Redirige vers login user
-
+                target: app_login
             remember_me:
                 secret: '%kernel.secret%'
                 lifetime: 604800
@@ -53,16 +76,14 @@ security:
     access_control:
         - { path: ^/admin/login, roles: PUBLIC_ACCESS }
         - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/juriste/login, roles: PUBLIC_ACCESS }  # Accès public à la page de login juriste
+        - { path: ^/juriste, roles: ROLE_JURISTE }        # Restriction aux juristes pour /juriste
 
 when@test:
     security:
         password_hashers:
-            # By default, password hashers are resource intensive and take time. This is
-            # important to generate secure password hashes. In tests however, secure hashes
-            # are not important, waste resources and increase test times. The following
-            # reduces the work factor to the lowest possible values.
             Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
                 algorithm: auto
-                cost: 4 # Lowest possible value for bcrypt
-                time_cost: 3 # Lowest possible value for argon
-                memory_cost: 10 # Lowest possible value for argon
+                cost: 4
+                time_cost: 3
+                memory_cost: 10
